// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewSharingModalWarning/> render() should not render anything because selected items are the same than initial items 1`] = `null`;

exports[`<ViewSharingModalWarning/> render() should not render anything because view is public 1`] = `null`;

exports[`<ViewSharingModalWarning/> render() should render one missing team 1`] = `
<div
  class="m-3"
>
  <div
    class="alert warning"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        <span
          class="totalItems"
          id="missing-teams-tooltip"
        >
          1
           team
          
        </span>
         
        will no longer be able to access this view.
      </span>
    </div>
  </div>
</div>
`;

exports[`<ViewSharingModalWarning/> render() should render one missing user 1`] = `
<div
  class="m-3"
>
  <div
    class="alert warning"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        <span
          class="totalItems"
          id="missing-users-tooltip"
        >
          1
           user
          
        </span>
         
        will no longer be able to access this view.
      </span>
    </div>
  </div>
</div>
`;

exports[`<ViewSharingModalWarning/> render() should render one missing user and one missing team 1`] = `
<div
  class="m-3"
>
  <div
    class="alert warning"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        <span
          class="totalItems"
          id="missing-teams-tooltip"
        >
          1
           team
          
        </span>
         and 
        <span
          class="totalItems"
          id="missing-users-tooltip"
        >
          1
           user
          
        </span>
         
        will no longer be able to access this view.
      </span>
    </div>
  </div>
</div>
`;

exports[`<ViewSharingModalWarning/> render() should render two missing teams 1`] = `
<div
  class="m-3"
>
  <div
    class="alert warning"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        <span
          class="totalItems"
          id="missing-teams-tooltip"
        >
          2
           team
          s
        </span>
         
        will no longer be able to access this view.
      </span>
    </div>
  </div>
</div>
`;

exports[`<ViewSharingModalWarning/> render() should render two missing users 1`] = `
<div
  class="m-3"
>
  <div
    class="alert warning"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        <span
          class="totalItems"
          id="missing-users-tooltip"
        >
          2
           user
          s
        </span>
         
        will no longer be able to access this view.
      </span>
    </div>
  </div>
</div>
`;

exports[`<ViewSharingModalWarning/> render() should render two missing users and two missing teams 1`] = `
<div
  class="m-3"
>
  <div
    class="alert warning"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        <span
          class="totalItems"
          id="missing-teams-tooltip"
        >
          2
           team
          s
        </span>
         and 
        <span
          class="totalItems"
          id="missing-users-tooltip"
        >
          2
           user
          s
        </span>
         
        will no longer be able to access this view.
      </span>
    </div>
  </div>
</div>
`;
